@@ -1,3 +1,7 @@
+shmuel 31.08.2020 12:07:03 +0300 - build 757
+
+1. LuaFAR: continued 751.
+
 shmuel 26.08.2020 17:44:40 +0200 - build 756
 
 1. LuaFAR: refactoring.
